edited build.sbt